# mcp-dynamic-tools

./: .gitignore  README.md  pyproject.toml  run-server.sh  test.sh
src/mcp_dynamic_tools/: __init__.py  server.py
