[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-dynamic-tools"
version = "0.1.0"
description = "A dynamic MCP server that automatically discovers Python files and exposes them as MCP tools"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ben Vierck", email = "ben@lit.ai"},
    {name = "Claude (Anthropic)", email = "claude@anthropic.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["mcp", "ai", "tools", "dynamic", "server", "protocol"]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/xcud/mcp-dynamic-tools"
Repository = "https://github.com/xcud/mcp-dynamic-tools"
Issues = "https://github.com/xcud/mcp-dynamic-tools/issues"



[tool.hatch.build.targets.wheel]
packages = ["src/mcp_dynamic_tools"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
